removed precautions table
